# nytimes-books

./: README.md  config.py  extract.py  food-and-fitness.ndjson  hardcover-business-books.ndjson  hardcover-political-books.ndjson  newest_monthly_lists.json  pyproject.toml  requirements.txt
.github/workflows/: nightly-update.yml
Queries/: create_table.sql  load_copy_files.sql  load_stage_files.sql  sql_question1.sql  sql_question_2_1.sql  sql_question_2_2.sql  sql_question_3.sql  transform_create_v_lists_books.sql  transform_create_vlists.sql
data/: audio-fiction.ndjson  audio-nonfiction.ndjson  business-books.ndjson  graphic-books-and-manga.ndjson  mass-market-monthly.ndjson
exp/: audio-fiction.ndjson  exploration.ipynb  paperback-business-books.ndjson  science.ndjson
exp/.ipynb_checkpoints/: exploration-checkpoint.ipynb  newest_monthly_lists-checkpoint.json
nytimes_project/: pyvenv.cfg
nytimes_project/Scripts/: activate  activate.bat
